Added 2020-07-24 events and archetypes

--- a/MTGOArchetypeParser.DownloadAll.App/Properties/launchSettings.json
+++ b/MTGOArchetypeParser.DownloadAll.App/Properties/launchSettings.json
@@ -1,7 +1,8 @@
 {
   "profiles": {
     "MTGOArchetypeParser.DownloadAll.App": {
-      "commandName": "Project"
+      "commandName": "Project",
+      "commandLineArgs": "allmetash"
     }
   }
 }
