Added Meta Week field to simplify analysis

--- a/MTGOArchetypeParser.DownloadAll.App/Properties/launchSettings.json
+++ b/MTGOArchetypeParser.DownloadAll.App/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "MTGOArchetypeParser.DownloadAll.App": {
       "commandName": "Project",
-      "commandLineArgs": "allmetash"
+      "commandLineArgs": "allmetas"
     }
   }
 }
