Slight naming adjustment

--- a/MTGOArchetypeParser.DownloadAll.App/Properties/launchSettings.json
+++ b/MTGOArchetypeParser.DownloadAll.App/Properties/launchSettings.json
@@ -1,8 +1,7 @@
 {
   "profiles": {
     "MTGOArchetypeParser.DownloadAll.App": {
-      "commandName": "Project",
-      "commandLineArgs": "allmetas"
+      "commandName": "Project"
     }
   }
 }
