--- a/MTGOArchetypeParser.App/Properties/launchSettings.json
+++ b/MTGOArchetypeParser.App/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "MTGOArchetypeParser.App": {
       "commandName": "Project",
-      "commandLineArgs": "https://magic.wizards.com/en/articles/archive/mtgo-standings/modern-preliminary-2020-07-25"
+      "commandLineArgs": "https://magic.wizards.com/en/articles/archive/mtgo-standings/modern-challenge-2020-07-26?a=20"
     }
   }
 }
