Renamed Download app to Report app since it fits better is new functionalities

--- a/MTGOArchetypeParser.Reports.App/Properties/launchSettings.json
+++ b/MTGOArchetypeParser.Reports.App/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "MTGOArchetypeParser.DownloadAll.App": {
+    "MTGOArchetypeParser.Reports.App": {
       "commandName": "Project"
     }
   }
