Added some older events that Wizards posted yesterday

--- a/MTGOArchetypeParser.App/Properties/launchSettings.json
+++ b/MTGOArchetypeParser.App/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "MTGOArchetypeParser.App": {
       "commandName": "Project",
-      "commandLineArgs": "https://magic.wizards.com/en/articles/archive/mtgo-standings/modern-showcase-last-chance-2020-08-12?a=20"
+      "commandLineArgs": "https://magic.wizards.com/en/articles/archive/mtgo-standings/modern-challenge-2020-08-12-0"
     }
   }
 }
