--- a/MTGOArchetypeParser.App/Properties/launchSettings.json
+++ b/MTGOArchetypeParser.App/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "MTGOArchetypeParser.App": {
       "commandName": "Project",
-      "commandLineArgs": "https://magic.wizards.com/en/articles/archive/mtgo-standings/modern-challenge-2020-08-12-0"
+      "commandLineArgs": "https://magic.wizards.com/en/articles/archive/mtgo-standings/modern-league-2020-08-14?a=1"
     }
   }
 }
