Converted MTGODecklistParser reference to submodule

--- a/MTGOArchetypeParser.Tests.SampleData.App/MTGOArchetypeParser.Tests.SampleData.App.csproj
+++ b/MTGOArchetypeParser.Tests.SampleData.App/MTGOArchetypeParser.Tests.SampleData.App.csproj
@@ -6,10 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\MTGODecklistParser\MTGODecklistParser\MTGODecklistParser.csproj" />
     <ProjectReference Include="..\MTGOArchetypeParser.Archetypes.Modern\MTGOArchetypeParser.Archetypes.Modern.csproj" />
     <ProjectReference Include="..\MTGOArchetypeParser.Metas.Modern\MTGOArchetypeParser.Metas.Modern.csproj" />
     <ProjectReference Include="..\MTGOArchetypeParser\MTGOArchetypeParser.csproj" />
+    <ProjectReference Include="..\MTGODecklistParser\MTGODecklistParser\MTGODecklistParser.csproj" />
   </ItemGroup>
 
 </Project>
