--- a/MTGOArchetypeParser.App/MTGOArchetypeParser.App.csproj
+++ b/MTGOArchetypeParser.App/MTGOArchetypeParser.App.csproj
@@ -6,9 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\MTGODecklistParser\MTGODecklistParser\MTGODecklistParser.csproj" />
     <ProjectReference Include="..\MTGOArchetypeParser.Archetypes.Modern\MTGOArchetypeParser.Archetypes.Modern.csproj" />
     <ProjectReference Include="..\MTGOArchetypeParser\MTGOArchetypeParser.csproj" />
+    <ProjectReference Include="..\MTGODecklistParser\MTGODecklistParser\MTGODecklistParser.csproj" />
   </ItemGroup>
 
 </Project>
