Moved code interacting with MTGODecklistParser to an abstraction layer to simplify migration to MTGODecklistCache

--- a/MTGOArchetypeParser.Tests.SampleData.App/MTGOArchetypeParser.Tests.SampleData.App.csproj
+++ b/MTGOArchetypeParser.Tests.SampleData.App/MTGOArchetypeParser.Tests.SampleData.App.csproj
@@ -7,9 +7,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MTGOArchetypeParser.Archetypes.Modern\MTGOArchetypeParser.Archetypes.Modern.csproj" />
+    <ProjectReference Include="..\MTGOArchetypeParser.DataSources\MTGOArchetypeParser.DataSources.csproj" />
     <ProjectReference Include="..\MTGOArchetypeParser.Metas.Modern\MTGOArchetypeParser.Metas.Modern.csproj" />
     <ProjectReference Include="..\MTGOArchetypeParser\MTGOArchetypeParser.csproj" />
-    <ProjectReference Include="..\MTGODecklistParser\MTGODecklistParser\MTGODecklistParser.csproj" />
   </ItemGroup>
 
 </Project>
