--- a/MTGOArchetypeParser.App/MTGOArchetypeParser.App.csproj
+++ b/MTGOArchetypeParser.App/MTGOArchetypeParser.App.csproj
@@ -7,8 +7,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MTGOArchetypeParser.Archetypes.Modern\MTGOArchetypeParser.Archetypes.Modern.csproj" />
+    <ProjectReference Include="..\MTGOArchetypeParser.DataSources\MTGOArchetypeParser.DataSources.csproj" />
     <ProjectReference Include="..\MTGOArchetypeParser\MTGOArchetypeParser.csproj" />
-    <ProjectReference Include="..\MTGODecklistParser\MTGODecklistParser\MTGODecklistParser.csproj" />
   </ItemGroup>
 
 </Project>
