--- a/MTGOArchetypeParser.Reports.App/MTGOArchetypeParser.Reports.App.csproj
+++ b/MTGOArchetypeParser.Reports.App/MTGOArchetypeParser.Reports.App.csproj
@@ -8,9 +8,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MTGOArchetypeParser.Archetypes.Modern\MTGOArchetypeParser.Archetypes.Modern.csproj" />
+    <ProjectReference Include="..\MTGOArchetypeParser.DataSources\MTGOArchetypeParser.DataSources.csproj" />
     <ProjectReference Include="..\MTGOArchetypeParser.Metas.Modern\MTGOArchetypeParser.Metas.Modern.csproj" />
     <ProjectReference Include="..\MTGOArchetypeParser\MTGOArchetypeParser.csproj" />
-    <ProjectReference Include="..\MTGODecklistParser\MTGODecklistParser\MTGODecklistParser.csproj" />
   </ItemGroup>
 
 </Project>
