Path and naming adjustments

--- a/MTGOArchetypeParser.Tests.Updater.App/MTGOArchetypeParser.Tests.Updater.App.csproj
+++ b/MTGOArchetypeParser.Tests.Updater.App/MTGOArchetypeParser.Tests.Updater.App.csproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MTGOArchetypeParser.Archetypes.Modern\MTGOArchetypeParser.Archetypes.Modern.csproj" />
-    <ProjectReference Include="..\MTGOArchetypeParser.DataSources\MTGOArchetypeParser.DataSources.csproj" />
+    <ProjectReference Include="..\MTGOArchetypeParser.Data\MTGOArchetypeParser.Data.csproj" />
     <ProjectReference Include="..\MTGOArchetypeParser.Metas.Modern\MTGOArchetypeParser.Metas.Modern.csproj" />
     <ProjectReference Include="..\MTGOArchetypeParser\MTGOArchetypeParser.csproj" />
   </ItemGroup>
