Updated test data to new namiing scheme

--- a/MTGOArchetypeParser.Reports.App/Properties/launchSettings.json
+++ b/MTGOArchetypeParser.Reports.App/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "MTGOArchetypeParser.Reports.App": {
       "commandName": "Project",
-      "commandLineArgs": "\"$(SolutionDir)MTGODecklistCache\\Tournaments\" allmetas includeleagues"
+      "commandLineArgs": "\"$(SolutionDir)MTGODecklistCache\\Tournaments\""
     }
   }
 }
