Migrated to JSON format data source, tests all functional

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "ManaTradersDecklistCache"]
 	path = ManaTradersDecklistCache
 	url = https://github.com/Badaro/ManaTradersDecklistCache.git
+[submodule "MTGOArchetypeParserData"]
+	path = MTGOArchetypeParserData
+	url = https://github.com/Badaro/MTGOArchetypeParserData.git
