--- a/MTGOArchetypeParser.Reports.App/MTGOArchetypeParser.Reports.App.csproj
+++ b/MTGOArchetypeParser.Reports.App/MTGOArchetypeParser.Reports.App.csproj
@@ -8,7 +8,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MTGOArchetypeParser.Data\MTGOArchetypeParser.Data.csproj" />
-    <ProjectReference Include="..\MTGOArchetypeParser.Formats.Modern\MTGOArchetypeParser.Formats.Modern.csproj" />
+    <ProjectReference Include="..\MTGOArchetypeParser.Formats.FromJson\MTGOArchetypeParser.Formats.FromJson.csproj" />
     <ProjectReference Include="..\MTGOArchetypeParser\MTGOArchetypeParser.csproj" />
   </ItemGroup>
 
