--- a/MTGOArchetypeParser.Tests/MTGOArchetypeParser.Tests.csproj
+++ b/MTGOArchetypeParser.Tests/MTGOArchetypeParser.Tests.csproj
@@ -15,7 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MTGOArchetypeParser.Data\MTGOArchetypeParser.Data.csproj" />
-    <ProjectReference Include="..\MTGOArchetypeParser.Formats.Modern\MTGOArchetypeParser.Formats.Modern.csproj" />
+    <ProjectReference Include="..\MTGOArchetypeParser.Formats.FromJson\MTGOArchetypeParser.Formats.FromJson.csproj" />
     <ProjectReference Include="..\MTGOArchetypeParser\MTGOArchetypeParser.csproj" />
   </ItemGroup>
 
