--- a/MTGOArchetypeParser.Reports.App/Properties/launchSettings.json
+++ b/MTGOArchetypeParser.Reports.App/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "MTGOArchetypeParser.Reports.App": {
       "commandName": "Project",
-      "commandLineArgs": "\"$(SolutionDir)MTGODecklistCache\\Tournaments\" \"$(SolutionDir)ManaTradersDecklistCache\\Tournaments\""
+      "commandLineArgs": "\"$(SolutionDir)MTGOArchetypeParserData\\Formats\" \"$(SolutionDir)MTGODecklistCache\\Tournaments\" \"$(SolutionDir)ManaTradersDecklistCache\\Tournaments\" "
     }
   }
 }
