--- a/MTGOArchetypeParser.App/MTGOArchetypeParser.App.csproj
+++ b/MTGOArchetypeParser.App/MTGOArchetypeParser.App.csproj
@@ -21,6 +21,6 @@
     </None>
   </ItemGroup>
 
-  <ProjectExtensions><VisualStudio><UserProperties settings_1json__JsonSchema="https://github.com/go-vela/types/releases/latest/download/schema.json" /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions><VisualStudio><UserProperties settings_1json__JsonSchema=" " /></VisualStudio></ProjectExtensions>
 
 </Project>
