--- a/MTGOArchetypeParser.App/Properties/launchSettings.json
+++ b/MTGOArchetypeParser.App/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "MTGOArchetypeParser.App": {
       "commandName": "Project",
-      "commandLineArgs": "csv detect filter=modern-preliminary-2021-01-21 referenceformat=Modern-Old"
+      "commandLineArgs": "console detect filter=modern-preliminary-2021-01-21"
     }
   }
 }
