Cleaned up settings.json for easier packaging

--- a/MTGOArchetypeParser.App/MTGOArchetypeParser.App.csproj
+++ b/MTGOArchetypeParser.App/MTGOArchetypeParser.App.csproj
@@ -21,6 +21,6 @@
     </None>
   </ItemGroup>
 
-  <ProjectExtensions><VisualStudio><UserProperties settings_1json__JsonSchema=" " /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
 
 </Project>
