--- a/MTGOArchetypeParser.App/settings.json
+++ b/MTGOArchetypeParser.App/settings.json
@@ -1,5 +1,5 @@
 {
-  "Format": "Modern",
+  "Format": "",
   "ReferenceFormat": "",
   "Meta": "",
   "Filter": [
@@ -7,8 +7,8 @@
   "Exclude": [
   ],
   "TournamentFolder": [
-    "C:\\Users\\Filipe\\source\\repos\\MTGOArchetypeParser\\MTGODecklistCache\\Tournaments",
-    "C:\\Users\\Filipe\\source\\repos\\MTGOArchetypeParser\\ManaTradersDecklistCache\\Tournaments"
+    "MTGODecklistCache\\Tournaments",
+    "ManaTradersDecklistCache\\Tournaments"
   ],
-  "FormatDataFolder": "C:\\Users\\Filipe\\source\\repos\\MTGOArchetypeParser\\MTGOFormatData\\Formats"
+  "FormatDataFolder": "MTGOArchetypeParser\\MTGOFormatData\\Formats"
 }
