Fixed wrong default path in settings.json

--- a/MTGOArchetypeParser.App/settings.json
+++ b/MTGOArchetypeParser.App/settings.json
@@ -10,5 +10,5 @@
     "MTGODecklistCache\\Tournaments",
     "ManaTradersDecklistCache\\Tournaments"
   ],
-  "FormatDataFolder": "MTGOArchetypeParser\\MTGOFormatData\\Formats"
+  "FormatDataFolder": "MTGOFormatData\\Formats"
 }
