Fixed default settings file

--- a/MTGOArchetypeParser.App/settings.json
+++ b/MTGOArchetypeParser.App/settings.json
@@ -7,8 +7,7 @@
   "Exclude": [
   ],
   "TournamentFolder": [
-    "MTGODecklistCache\\Tournaments",
-    "ManaTradersDecklistCache\\Tournaments"
+    "MTGODecklistCache\\Tournaments"
   ],
   "FormatDataFolder": "MTGOFormatData\\Formats"
 }
