New defaults including conflict solving

--- a/MTGOArchetypeParser.App/settings.json
+++ b/MTGOArchetypeParser.App/settings.json
@@ -2,6 +2,7 @@
   "Format": "",
   "ReferenceFormat": "",
   "Meta": "",
+  "ConflictSolvingMode": "PreferSimpler",
   "Filter": [
   ],
   "Exclude": [
