--- a/MTGOArchetypeParser.App/MTGOArchetypeParser.App.csproj
+++ b/MTGOArchetypeParser.App/MTGOArchetypeParser.App.csproj
@@ -17,6 +17,6 @@
     </None>
   </ItemGroup>
 
-  <ProjectExtensions><VisualStudio><UserProperties /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions><VisualStudio><UserProperties properties_4launchsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
