Same behavior as today (everything but results output to console), but already using the new interfaces

--- a/MTGOArchetypeParser.App/Properties/launchSettings.json
+++ b/MTGOArchetypeParser.App/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "MTGOArchetypeParser.App": {
       "commandName": "Project",
-      "commandLineArgs": "console detect format=Modern exclude=League meta=current maxdecksperevent=32 metabreakdown=true cardbreakdown=true winratebreakdown=true formatdatafolder=$(SolutionDir)MTGOFormatData\\Formats tournamentfolder=$(SolutionDir)MTGODecklistCache\\Tournaments folderfilter=manatraders"
+      "commandLineArgs": "console detect format=Modern filter=Modern exclude=League meta=current metabreakdown=true cardbreakdown=true winratebreakdown=true matchupsfor=\"Mono Green Tron\" formatdatafolder=$(SolutionDir)MTGOFormatData\\Formats tournamentfolder=$(SolutionDir)MTGODecklistCache\\Tournaments"
     }
   }
 }
